--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -2046,11 +2046,16 @@
             <h3 style="z-index: 99">FAQ</h3>
             <table class="faqtable" width="100%">
               <tr>
+                <td class="faq-number-cell" style="background-color:lemonchiffon"></td>
+                <td style="background-color: #000; color: #fff;"><marquee><strong>(綠取階段 Application Phase)</strong></marquee></td>
+                <td style="background-color:lemonchiffon"></td>
+              </tr>
+              <tr>
                 <td class="faq-number-cell">
                   <span class="faq-number">1</span>
                 </td>
                 <td class="QA-section" style="border-right: none">
-                  <span class="labelAQ">Q: 如何確認是否付款成功？</span><br />
+                  <span class="labelAQ">Q: 我該不該加購通行憑證呢？</span><br />
                   <span
                     style="
                       font-size: 1rem;
@@ -2058,17 +2063,15 @@
                     "
                   >
                     A:
-                    完成付款後，系統會自動寄出付款確認信至您填寫的信箱。團隊將於指定時間統一更新「攤商管理」頁面中的核帳狀態。
+                    我們提供了一個<a href=https://docs.google.com/spreadsheets/d/1A33pr06kXFJKgvln3-ie_YdIw-BeYaRm9ckBdDQZtyc/edit?usp=sharing" target="_blank">簡易計算表格</a>，只需填寫攤位類型、桌數以及預計進場人數，系統將會提供最佳加購建議，幫助您避免錯誤購買。歡迎善加利用！
                   </span>
                 </td>
                 <td class="QA-section">
                   <span class="labelAQ en"
-                    >Q: How do I confirm if my payment was successful?</span
+                    >Q: Should I purchase additional access passes?</span
                   ><br />
                   <span class="faq-answer-en">
-                    A: After completing payment, a confirmation email will be
-                    sent to your registered email. The team will update the
-                    Exhibitor Status on the "Dashboard" at the specified time.
+                    A: We have provided a <a href=https://docs.google.com/spreadsheets/d/1A33pr06kXFJKgvln3-ie_YdIw-BeYaRm9ckBdDQZtyc/edit?usp=sharing" target="_blank">simple calculation spreadsheet</a>. By entering your booth type, number of tables, and expected number of attendees, the system will suggest the optimal number of passes to purchase, helping you avoid incorrect purchases. We encourage you to make use of it!
                   </span>
                 </td>
               </tr>
@@ -2078,7 +2081,7 @@
                   <span class="faq-number">2</span>
                 </td>
                 <td class="QA-section" style="border-right: none">
-                  <span class="labelAQ">Q: 沒有收到付款確認信怎麼辦？</span
+                  <span class="labelAQ">Q: 同一天的通行憑證可以讓不同人使用嗎？</span
                   ><br />
                   <span
                     style="
@@ -2087,18 +2090,16 @@
                     "
                   >
                     A:
-                    請先確認垃圾郵件夾；如仍未收到，請截圖您的付款頁面或紀錄，並來信與我們聯繫。
+                    不可以。通行憑證為刺青貼紙形式，每張貼紙於同一天僅限一人使用，當日不可更換使用者，亦不可跨日使用。
                   </span>
                 </td>
                 <td class="QA-section">
                   <span class="labelAQ en"
-                    >Q: What if I didn't receive the payment confirmation
-                    email?</span
+                    >Q: Can the same-day access pass be used by different people?
+                    </span
                   ><br />
                   <span class="faq-answer-en">
-                    A: Please check your spam folder first. If you still haven't
-                    received it, take a screenshot of your payment page or
-                    record and contact us.
+                    A: No. Access passes are provided as temporary tattoo stickers. Each sticker may only be used by one person per day and cannot be transferred to another person on the same day or used across different days.
                   </span>
                 </td>
               </tr>
@@ -2108,7 +2109,7 @@
                   <span class="faq-number">3</span>
                 </td>
                 <td class="QA-section" style="border-right: none">
-                  <span class="labelAQ">Q: 我已付款，但錄取狀態沒有更新？</span
+                  <span class="labelAQ">Q: 如果我需要更多通行憑證，可以加購嗎？</span
                   ><br />
                   <span
                     style="
@@ -2117,18 +2118,22 @@
                     "
                   >
                     A:
-                    請耐心等待，團隊會於公告時間統一更新核帳狀態。如有急件或疑問，請附上付款截圖來信詢問。
+                    每個攤位最多僅能加購 1 份通行憑證。如有超過需求，請依實際活動天數與人數，另行購買入場票券。<br><br>
+
+                    （親友預售票將於 01/26–02/08 開賣。）<br>
+                    （各票種與相關資訊，請持續關注我們的 IG 貼文喔～～）
                   </span>
                 </td>
                 <td class="QA-section">
                   <span class="labelAQ en"
-                    >Q: I have paid, but my Exhibitor Status hasn't been
-                    updated?</span
+                    >Q:  Can I purchase more access passes if needed?
+                    </span
                   ><br />
                   <span class="faq-answer-en">
-                    A: Please be patient. The TPABF team will update the
-                    Exhibitor Status at the announced time. For urgent cases or
-                    questions, please email us with your payment screenshot.
+                    A: Each booth may purchase up to one additional access pass. If you need more, please purchase admission tickets based on the actual number of event days and attendees.<br><br>
+
+                    (Friends & Family Ticket available from 01/26 to 02/08.)<br>
+                    (For ticket types and updates, please follow our Instagram for more information.)
                   </span>
                 </td>
               </tr>
@@ -2139,7 +2144,7 @@
                 </td>
                 <td class="QA-section" style="border-right: none">
                   <span class="labelAQ"
-                    >Q: 已付款基礎攤位費，但想加購通行憑證？</span
+                    >Q: 如何確認是否付款成功？</span
                   ><br />
                   <span
                     style="
@@ -2148,18 +2153,16 @@
                     "
                   >
                     A:
-                    階段為唯一的加購申請與付款時段，付款完成後無法再更改選項，請務必於付款前確認。
+                    完成付款後，訂單的付款狀態將會在官方商店中顯示。
                   </span>
                 </td>
                 <td class="QA-section">
                   <span class="labelAQ en"
-                    >Q: I have paid the basic fee, but want to add an extra
-                    pass?</span
+                    >Q: How can I confirm if my payment was successful?
+                    </span
                   ><br />
                   <span class="faq-answer-en">
-                    A: The current phase is the only period for add-on
-                    applications and payments. Once payment is completed,
-                    options cannot be changed. Please confirm before paying.
+                    A: After completing payment, the payment status will be shown in your order on the official store.
                   </span>
                 </td>
               </tr>
@@ -2169,23 +2172,22 @@
                   <span class="faq-number">5</span>
                 </td>
                 <td class="QA-section" style="border-right: none">
-                  <span class="labelAQ">Q: 是否有開發票或收據？</span><br />
+                  <span class="labelAQ">Q: 我已完成付款，但參展資格狀態尚未更新？</span><br />
                   <span
                     style="
                       font-size: 1rem;
                       font-family: 'Inclusive Sans', sans-serif;
                     "
                   >
-                    A: 網站自動開立電子發票，請確認報名時所填Email。
+                    A: 請耐心等候，團隊將於 1 月 5 日前 統一更新「攤商管理頁面」的狀態。如有急件或任何疑問，請附上付款截圖來信洽詢。
                   </span>
                 </td>
                 <td class="QA-section">
                   <span class="labelAQ en"
-                    >Q: Will I receive an invoice or receipt?</span
+                    >Q: I’ve completed the payment, but my Exhibitor Status hasn’t been updated.</span
                   ><br />
                   <span class="faq-answer-en">
-                    A: The website automatically issues an e-invoice. Please
-                    make sure your email is correct when registering.
+                    A: Please allow some time for processing. The team will update the status on the Exhibitor Management Page by January 5. If you have any urgent matters or questions, please contact us and include a screenshot of your payment.
                   </span>
                 </td>
               </tr>
@@ -2195,22 +2197,23 @@
                   <span class="faq-number">6</span>
                 </td>
                 <td class="QA-section" style="border-right: none">
-                  <span class="labelAQ">Q: 我還可以加購通行憑證嗎？</span><br />
+                  <span class="labelAQ">Q: 我已完成付款，還可以更改加購的桌數或通行憑證數量嗎？</span><br />
                   <span
                     style="
                       font-size: 1rem;
                       font-family: 'Inclusive Sans', sans-serif;
                     "
                   >
-                    A: 目前不開放加購。如需入場，可至攤商管理頁面購買「親友快速通關票」。
+                    A: 本階段為唯一的加購申請時段（至 12/31 為止）。完成繳費後恕不接受任何變更，請於付款前確認所需的加購項目。
                   </span>
                 </td>
                 <td class="QA-section">
                   <span class="labelAQ en"
-                    >Q: Can I purchase additional access passes?</span
+                    >Q: I’ve completed the payment. Can I still change the number of additional tables or access passes?
+                    </span
                   ><br />
                   <span class="faq-answer-en">
-                    A: Additional access passes are currently not available. If someone needs entry, please purchase a "Fast Track Friend Pass" through the Exhibitor Management Page.
+                    A: This is the only period for add-on applications (until Dec 31). No changes will be accepted after payment is completed, so please confirm all add-on items before payment.
                   </span>
                 </td>
               </tr>
@@ -2220,82 +2223,38 @@
                   <span class="faq-number">7</span>
                 </td>
                 <td class="QA-section" style="border-right: none">
-                  <span class="labelAQ">Q: 親友快速通關票怎麼買？</span><br />
+                  <span class="labelAQ">Q: 是否會提供發票或收據？
+                  </span><br />
                   <span
                     style="
                       font-size: 1rem;
                       font-family: 'Inclusive Sans', sans-serif;
                     "
                   >
-                    A: 購票時間為 11/20–11/23。請從攤商管理頁面提供的連結購買（建議由攤主統一處理），並輸入優惠代碼。每個代碼限單次下單，建議先統計數量後一次購買。
+                    A: 台灣訂單將由網站自動開立電子發票，請確認報名時填寫的 Email 正確。海外單位如需開立發票，請填寫<a href="https://docs.google.com/forms/d/e/1FAIpQLScuHHfn3zhWd4RVrOCPLY72xf9XiNAf1Sb8De4WJaOCAHovDQ/viewform?usp=header" target="_blank">此表單</a>；提交後，我們將盡快將發票寄送至您的電子郵件信箱。
                   </span>
                 </td>
                 <td class="QA-section">
                   <span class="labelAQ en"
-                    >Q: How do I buy the Fast Track Friend Pass?</span
+                    >Q: Will an invoice or receipt be provided?
+                    </span
                   ><br />
                   <span class="faq-answer-en">
-                    A: Sales are open from 11/20–11/23. Please use the purchase link provided in the Exhibitor Management Page (we recommend the exhibitor handle all purchases for their friends) and enter the discount code. Each code can be used for one order only, so please confirm the quantity needed before placing a single order.
+                    A: Overseas participants who require an invoice should complete <a href="https://docs.google.com/forms/d/e/1FAIpQLScuHHfn3zhWd4RVrOCPLY72xf9XiNAf1Sb8De4WJaOCAHovDQ/viewform?usp=header" target="_blank">this form</a>; once submitted, the invoice will be sent to your email as soon as possible.
                   </span>
                 </td>
               </tr>
-              <!-- 8 -->
               <tr>
-                <td class="faq-number-cell">
-                  <span class="faq-number">8</span>
-                </td>
-                <td class="QA-section" style="border-right: none">
-                  <span class="labelAQ">Q: 通行憑證可以讓不同人使用嗎？</span><br />
-                  <span
-                    style="
-                      font-size: 1rem;
-                      font-family: 'Inclusive Sans', sans-serif;
-                    "
-                  >
-                    A: 可以。但活動入場以「紋身貼紙」為憑證，通行憑證僅作識別使用。
-                  </span>
-                </td>
-                <td class="QA-section">
-                  <span class="labelAQ en"
-                    >Q: Can access passes be used by different people?</span
-                  ><br />
-                  <span class="faq-answer-en">
-                    A: Yes. However, entry to the event requires the "tattoo sticker" as the admission credential. The access pass is for identification only.
-                  </span>
-                </td>
+                <td class="faq-number-cell" style="background-color:lime"></td>
+                <td style="background-color: #000; color: #fff;"><marquee><strong>（活動期間 Event Period）</strong></marquee></td>
+                <td style="background-color:lime"></td>
               </tr>
-              <!-- 9 -->
               <tr>
                 <td class="faq-number-cell">
-                  <span class="faq-number">9</span>
+                  <span class="faq-number">1</span>
                 </td>
                 <td class="QA-section" style="border-right: none">
-                  <span class="labelAQ">Q: 為什麼攤商編號貼紙的字體顏色不一樣？</span><br />
-                  <span
-                    style="
-                      font-size: 1rem;
-                      font-family: 'Inclusive Sans', sans-serif;
-                    "
-                  >
-                    A: 黃色字體代表首次參與的攤商，歡迎大家多多交流！
-                  </span>
-                </td>
-                <td class="QA-section">
-                  <span class="labelAQ en"
-                    >Q: Why are the booth number sticker text colors different?</span
-                  ><br />
-                  <span class="faq-answer-en">
-                    A: Yellow text indicates exhibitors who are joining us for the first time—please feel free to say hi!
-                  </span>
-                </td>
-              </tr>
-              <!-- 10 -->
-              <tr>
-                <td class="faq-number-cell">
-                  <span class="faq-number">10</span>
-                </td>
-                <td class="QA-section" style="border-right: none">
-                  <span class="labelAQ">Q: 我可以換位置嗎？</span><br />
+                  <span class="labelAQ">Q: 我可以換攤位位置嗎？</span><br />
                   <span
                     style="
                       font-size: 1rem;
@@ -2314,10 +2273,9 @@
                   </span>
                 </td>
               </tr>
-              <!-- 11 -->
               <tr>
                 <td class="faq-number-cell">
-                  <span class="faq-number">11</span>
+                  <span class="faq-number">2</span>
                 </td>
                 <td class="QA-section" style="border-right: none">
                   <span class="labelAQ">Q: 草率簿可以多拿幾本嗎？</span><br />
@@ -2342,7 +2300,7 @@
               <!-- 12 -->
               <tr>
                 <td class="faq-number-cell">
-                  <span class="faq-number">12</span>
+                  <span class="faq-number">3</span>
                 </td>
                 <td class="QA-section" style="border-right: none">
                   <span class="labelAQ">Q: 材料區怎麼沒有多餘的佈置材料？</span><br />
@@ -2364,56 +2322,6 @@
                   </span>
                 </td>
               </tr>
-              <!-- 13 -->
-              <tr>
-                <td class="faq-number-cell">
-                  <span class="faq-number">13</span>
-                </td>
-                <td class="QA-section" style="border-right: none">
-                  <span class="labelAQ">Q: 我想在 NMHW 寄賣書籍，可以嗎？</span><br />
-                  <span
-                    style="
-                      font-size: 1rem;
-                      font-family: 'Inclusive Sans', sans-serif;
-                    "
-                  >
-                    A: 11/23 16:00 後，我們僅接受先前有填寫表單的寄售攤商交付未售完書籍，不開放臨時加收品項喔。
-                  </span>
-                </td>
-                <td class="QA-section">
-                  <span class="labelAQ en"
-                    >Q: I'd like to consign books at NMHW as well. Is that possible?</span
-                  ><br />
-                  <span class="faq-answer-en">
-                    A: After 16:00 on 11/23, we will only accept unsold books from exhibitors who previously submitted the consignment form. We are unable to accept any additional or last-minute items.
-                  </span>
-                </td>
-              </tr>
-              <!-- 14 -->
-              <tr>
-                <td class="faq-number-cell">
-                  <span class="faq-number">14</span>
-                </td>
-                <td class="QA-section" style="border-right: none">
-                  <span class="labelAQ">Q: 我也想參明年草率季十週年！！</span><br />
-                  <span
-                    style="
-                      font-size: 1rem;
-                      font-family: 'Inclusive Sans', sans-serif;
-                    "
-                  >
-                    A: 即日起至 11 月 23 日 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdX8IoYUCzD4RHkmqq60va11vtOdfPDMDnwPArOY0UZT9vltg/viewform" target="_blank">點此表單</a> 勾選「＊2026十週年報名我要參加＊」將直接獲取錄取資格。並維持與2025年相同之攤位費用。
-                  </span>
-                </td>
-                <td class="QA-section">
-                  <span class="labelAQ en"
-                    >Q: I want to join the 10th Anniversary edition of TPABF next year!</span
-                  ><br />
-                  <span class="faq-answer-en">
-                    A: From now until November 23rd, you may <a href="https://docs.google.com/forms/d/e/1FAIpQLSdX8IoYUCzD4RHkmqq60va11vtOdfPDMDnwPArOY0UZT9vltg/viewform" target="_blank">fill out this form</a> and check "＊I want to join the 2026 10th Anniversary＊" to secure your spot. The booth fee will be the same as in 2025.
-                  </span>
-        </td>
-      </tr>
     </table>
           </div>
         </td>
