--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -856,8 +856,7 @@
               </table>
 
               <p style="margin-top: 2rem; color: darkgray">
-                請再次確認資訊是否正確後進行修改。請注意，草率簿將於 8
-                月底開始排版，最終資料將以工作同仁所彙整的版本為準。
+                請再次確認資訊是否正確後再進行修改。請於 1/9 前完成調整，草率簿及相關露出文字將以最終由工作同仁彙整的版本為準。Please double-check that all information is correct before making any changes. Adjustments should be completed by January 9, and the final version of the Catalog and related text will be based on the version compiled by our team.
               </p>
 
               <div style="margin-top: 1rem">
