can safari be more annoying?

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -889,13 +889,14 @@
                 style="display: none; width: 100%; table-layout: auto"
               >
                 <td colspan="3" style="padding: 0; border: none">
-                  <table style="width: 100%; table-layout: auto">
+                  <table style="width: 100%; table-layout: fixed; box-sizing: border-box">
                     <tr style="padding: 0; border: none">
                       <td
                         style="
-                          width: 40vw;
+                          width: 65%;
                           border-right: 1px dashed black;
                           border-bottom: 1px solid aliceblue;
+                          box-sizing: border-box;
                         "
                       >
                         <span class="label">攤位編號 Booth Number</span><br />
@@ -916,10 +917,11 @@
                       id="booth-map-row"
                         style="
                           border-bottom: 1px solid aliceblue;
-                          width: 15vw;
+                          width: 35%;
                           border-top: 1px solid black;
                           border-left: none;
                           border-right: 1px solid black;
+                          box-sizing: border-box;
                         "
                       >
                         <span class="label">攤位地圖 Booth Map</span><br /><span
@@ -2047,7 +2049,7 @@
               <tr>
                 <td class="faq-number-cell" style="background-color:lemonchiffon"></td>
                 <td style="background-color: #000; color: #fff;"><marquee><strong>(綠取階段 Application Phase)</strong></marquee></td>
-                <td style="background-color:lemonchiffon"></td>
+                <td class="faq-number-cell" style="background-color:lemonchiffon"></td>
               </tr>
               <tr>
                 <td class="faq-number-cell">
@@ -2246,7 +2248,7 @@
               <tr>
                 <td class="faq-number-cell" style="background-color:lime"></td>
                 <td style="background-color: #000; color: #fff;"><marquee><strong>（活動期間 Event Period）</strong></marquee></td>
-                <td style="background-color:lime"></td>
+                <td class="faq-number-cell" style="background-color:lime"></td>
               </tr>
               <tr>
                 <td class="faq-number-cell">
