--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -2048,8 +2048,8 @@
             <table class="faqtable" width="100%">
               <tr>
                 <td class="faq-number-cell" style="background-color:lemonchiffon"></td>
-                <td style="background-color: #000; color: #fff;"><marquee><strong>(綠取階段 Application Phase)</strong></marquee></td>
-                <td class="faq-number-cell" style="background-color:lemonchiffon"></td>
+                <td style="background-color: #000; color: #fff;"><marquee><strong>(綠取階段)</strong></marquee></td>
+                <td style="background-color: #000; color: #fff;"><marquee><strong>(Application Phase)</strong></marquee></td>
               </tr>
               <tr>
                 <td class="faq-number-cell">
@@ -2247,8 +2247,8 @@
               </tr>
               <tr>
                 <td class="faq-number-cell" style="background-color:lime"></td>
-                <td style="background-color: #000; color: #fff;"><marquee><strong>（活動期間 Event Period）</strong></marquee></td>
-                <td class="faq-number-cell" style="background-color:lime"></td>
+                <td style="background-color: #000; color: #fff;"><marquee><strong>（活動期間）</strong></marquee></td>
+                <td style="background-color: #000; color: #fff;"><marquee><strong>(Event Period)</strong></marquee></td>
               </tr>
               <tr>
                 <td class="faq-number-cell">
