--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1267,6 +1267,7 @@
                   <small>hooroo@double-grass.com</small>
                 </td>
               </tr>
+
               <!-- 中國簽證資料上傳 Visa Upload -->
               <tr style="display: none" id="visaCN">
                 <td style="border-top: none; width: 55vw; border-right: none">
@@ -1286,6 +1287,22 @@
                       >填寫表單</a
                     >
                   </div>
+                </td>
+              </tr>
+
+               <!-- 海外簽證資料連結-->
+              <tr style="display: none" id="overseasvisa">
+                <td style="border-top: none; width: 55vw">
+                  <div id="overseasvisa-desc">
+                    <span class="label">簽證申請 Visa Support</span><br />
+                    We provide a visa support package, including an official invitation letter and a brief introduction to TPABF.
+                    If you need any additional documents or information, feel free to contact us.
+                  </div>
+                  <a
+                    href="https://drive.google.com/drive/folders/1WuFNxCMZA_vVqN-u_CEjHVKswGI5_4f1?usp=sharing"
+                    target="_blank"
+                    >Download Package</a
+                  >
                 </td>
               </tr>
 
@@ -1373,7 +1390,7 @@
                     ensure your items arrive safely and on time, please complete
                     the shipping service form first and follow its instructions.
                     It is important that your package
-                    <u>arrives before</u> February 11, 2026 (Wed.) at the
+                    <u>arrives before</u> by 2/15 (Sun.). at the
                     designated address. <br /><br />
                     Late or unregistered shipments will not be delivered to the
                     venue.
@@ -1391,7 +1408,7 @@
                   <div id="foreign-shipping-form-section">
                     <div style="min-width: 198px" id="foreign-shipping-form">
                       <a
-                        href="https://forms.gle/WExjyPUMcDxgXTaTA"
+                        href="https://forms.gle/Gi8PrGFw4ksQghxg7"
                         target="_blank"
                         >Shipping Service Form</a
                       >
@@ -1555,7 +1572,6 @@
         </td>
 
         <!-- 帳號資料 -->
-
         <td class="account" id="account" style="display: none">
           <h3 style="color: blue; margin-top: 15px">Profile</h3>
           <br />
@@ -2944,17 +2960,17 @@
                     <button
                       type="button"
                       id="togglePassword"
-        style="
+                      style="
                         position: absolute;
                         right: 5px;
                         top: 50%;
                         transform: translateY(-50%);
                         font-size: 14px;
-        "
-      >
+                        "
+                      >
                       Show
                     </button>
-      </div>
+                  </div>
 
                   <div id="password-rules" style="margin-top: 8px; font-size: 14px">
                     <div id="length-rule">✕ 至少 8 個字元</div>
