--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1985,8 +1985,8 @@
                   </p>
         
                   <p>
-                    <strong>＊＊我們將主要透過 <i>Email</i> 聯繫與回覆，來信時請務必在主旨註明您的<mark>報名編號</mark>，以利我們快速查詢與回覆。</strong><br />
-                    <strong>＊＊We will primarily respond via email. Please include your <mark>application number</mark> in the subject of each email to help us respond efficiently.</strong>
+                    <strong>＊＊我們將主要透過 <i>Email</i> 聯繫與回覆，來信時請務必在主旨註明您的<mark>報名編號及附上相關截圖畫面</mark>，以利我們快速查詢與回覆。</strong><br />
+                    <strong>＊＊We will primarily respond via email. Please include your <mark>application number and attached relevant screenshots</mark> in the subject of each email to help us respond efficiently.</strong>
                   </p>
                   <br>
                   <hr style="border-top: 1px dashed black; margin: 1rem 0; border-bottom: none;" />
