--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -404,12 +404,12 @@
                   <span id="facebook"></span>
                 </td>
               </tr>
-              <!-- <tr>
+              <tr>
                 <td colspan="2">
-                  <span class="label">無限柔軟是 Soft POW is…...</span><br />
+                  <span class="label">我最驕傲的小動作 CTRL + Y (small behavior I re-do)</span><br />
                   <span id="yearlyanswer"></span>
                 </td>
-              </tr> -->
+              </tr>
               <tr
                 id="electricity-row"
                 style="background-color: #d3c4bc; display: none"
@@ -821,10 +821,10 @@
                     />
                   </td>
                 </tr>
-                <!-- <tr>
+                <tr>
                   <td colspan="2">
                     <span class="label"
-                      >無限柔軟是 Soft POW is…..(50字內 Within 50 words）</span
+                      >我最驕傲的小動作 CTRL + Y (small behavior I re-do)</span
                     ><br />
                     <textarea
                       name="yearlyanswer"
@@ -834,7 +834,7 @@
                       maxlength="50"
                     ></textarea>
                   </td>
-                </tr> -->
+                </tr>
                 <tr id="edit-electricity-row">
                   <td
                     colspan="2"
