the poster is not there

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                   <img class="poster" src="image/26open call-01.png" />
                 </div>
                 <div class="poster-back">
-                  <img class="poster" src="image/26open call-02.png" />
+                  <img class="poster" src="image/26open call.png" />
                 </div>
               </div>
             </div>
