early bird ticket

--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
           <!-- 按鈕區域 - 左右並排 -->
           <div class="poster-buttons-container">
             <div class="ticket-button-container">
-              <a href="opencall.html" class="ticket-button">
-                OPEN CALL 徵件啟動！
+              <a href="https://www.accupass.com/event/2512310947135246631630" class="ticket-button">
+                早鳥票 Early Bird Ticket !
               </a>
             </div>
             <div class="flip-button-container">
-              <a href="opencall.html" style="text-decoration: none;">
+              <a href="https://www.accupass.com/event/2512310947135246631630" style="text-decoration: none;">
               <button class="flip-button">
                 <span class="flip-text" >👆</span>
               </button>
