--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -406,7 +406,7 @@
               </tr>
               <tr>
                 <td colspan="2">
-                  <span class="label">我最驕傲的小動作 CTRL + Y (small behavior I re-do)</span><br />
+                  <span class="label">2026TPABF 主題小提問：我最驕傲的小動作Ctrl+Y是？ (small behavior I re-do)</span><br />
                   <span id="yearlyanswer"></span>
                 </td>
               </tr>
@@ -824,7 +824,7 @@
                 <tr>
                   <td colspan="2">
                     <span class="label"
-                      >我最驕傲的小動作 CTRL + Y (small behavior I re-do)</span
+                      >2026TPABF 主題小提問：我最驕傲的小動作Ctrl+Y是？ (small behavior I re-do)</span
                     ><br />
                     <textarea
                       name="yearlyanswer"
