--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1309,6 +1309,7 @@
                 <td
                   colspan="1"
                   style="border-top: none; width: 80%; border-right: none"
+                  class="material-download-td"
                 >
                   <span class="label"
                     >行銷素材下載＆上傳 ​Download & Upload Marketing
@@ -1485,6 +1486,7 @@
                     width: 20%;
                     border-left: 1px dashed black;
                   "
+                  class="catalog-upload-td"
                 >
                   <div id="catalog-upload-section">
                     <div id="catalog-upload-btn" style="min-width: 198px">
