let;s change that

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1318,16 +1318,16 @@
                   <div id="material-download-annouce-time">
                     <div id="material-download-desc" style="margin-top: 0.5em">
                       <strong>視覺素材包：</strong><br />
-                      歡迎使用 2025 草率季主視覺素材，點此下載檔案。
+                      歡迎使用 2026 草率季主視覺素材，點此下載檔案。
                     </div>
                     <a
                       id="media-zip-link"
-                      href="https://drive.google.com/drive/folders/18CIdZXZi0wD4fGmh_YGyc-4PYUavMHSn?usp=sharing"
+                      href="https://drive.google.com/drive/folders/1Xn8yRXOP4LZ9tIZed-NpQGe-tylq_7K6?usp=drive_link"
                       download
                       >Download</a
                     ><br /><br />
                     <div id="material-upload-desc">
-                      <strong>社群宣傳圖檔上傳：</strong><br />
+                      <strong>行銷素材檔案上傳:</strong><br />
                       請依照素材包內的說明製作，並將製作完成的<b>貼文、限時動態圖檔</b>打包為
                       zip上傳。<br />
                       ⚠️
