--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -884,10 +884,10 @@
               <!-- 攤商編號 -->
               <tr
                 id="booth-number-row"
-                style="display: none; width: 100%; table-layout: auto"
+                style="display: none;"
               >
                 <td colspan="3" style="padding: 0; border: none">
-                  <table style="width: 100%; table-layout: fixed; box-sizing: border-box">
+                  <table style="width: 100%; box-sizing: border-box">
                     <tr style="padding: 0; border: none">
                       <td
                         style="
