--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="css/mainpage.css" />
     <link rel="stylesheet" href="css/font.css" />
     <link rel="stylesheet" href="css/exhibitors.css" />
-    <script src="js/exhibitors-list.js"></script>
 
      <!-- Store Modal -->
     <div id="storeModal" class="store-modal">
@@ -234,6 +233,7 @@
                 <option value="talk">Talk</option>
                 <option value="workshop">Workshop</option>
                 <option value="performance">Performance</option>
+                <option value="news">News</option>
               </select>
             </div>
           </div>
@@ -559,8 +559,6 @@
         });
       });
     </script>
-
-    <!-- 關閉主要內容容器 -->
     </div>
   </body>
 </html>
