--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
           <!-- 按鈕區域 - 左右並排 -->
           <div class="poster-buttons-container">
             <div class="ticket-button-container">
-              <a href="https://www.accupass.com/event/2512310947135246631630" class="ticket-button">
-                早鳥票 Early Bird Ticket !
+              <a href="ticketvisit.html" class="ticket-button">
+                購票參觀｜TICKETS & VISIT
               </a>
             </div>
             <div class="flip-button-container">
-              <a href="https://www.accupass.com/event/2512310947135246631630" style="text-decoration: none;">
+              <a href="ticketvisit.html" style="text-decoration: none;">
               <button class="flip-button">
                 <span class="flip-text" >👆</span>
               </button>
@@ -130,14 +130,14 @@
           
           <!-- 按鈕功能說明文字 -->
           <div class="button-explanation">
-            <!-- <div class="explanation-text" style="color:rgb(60,60,60)">     
+            <div class="explanation-text" style="color:rgb(60,60,60)">     
               左側的按鈕可供您購買票券，並同時了解展覽的開放時間地點、票價資訊、參展名單、完整節目表、展覽常見問及參觀須知；右側的按鈕則能讓您翻轉海報，查看背面的快速資訊。
               The button on the left allows you to purchase tickets and learn more about visiting information, including opening hours, ticket prices, and visitor guidelines. The button on the right lets you flip the poster to view the back side, revealing additional details.
-            </div> -->
-            <div class="explanation-text" style="color:rgb(60,60,60)">     
+            </div>
+            <!-- <div class="explanation-text" style="color:rgb(60,60,60)">     
               2026草率季十週年 OPEN CALL 徵件開始！請點擊按鈕進入徵件頁面查看詳細資訊，包括徵件條件、徵件時間、徵件方式等以及草率季十週年的相關資訊。
               The 2026 TPABF 10th Anniversary OPEN CALL is now open! Please click the button to enter the OPEN CALL form page to view detailed information, including application criteria, application dates, application methods, and information about the TPABF 10th Anniversary.
-            </div>
+            </div> -->
           </div>
           
           <!-- start of poster-section -->
