--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
             <div class="poster-container" data-flipped="false">
               <div class="poster-card">
                 <div class="poster-front">
-                  <img class="poster" src="image/26open call-01.png" />
+                  <img class="poster" src="image/mainpage/main-01.jpg" />
                 </div>
                 <div class="poster-back">
-                  <img class="poster" src="image/26open call.png" />
+                  <img class="poster" src="image/mainpage/main-02.jpg" />
                 </div>
               </div>
             </div>
