--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1532,7 +1532,7 @@
                     <span id="ticket-discountcode"></span>
                     <br /><br />
                     <a
-                      href="https://tour.ibon.com.tw/event/e2508000035koaw"
+                      href="https://www.accupass.com/eflow/ticket/2512310947135246631630"
                       target="_blank"
                       id="ticket-link"
                       >快速通關票購票連結</a
