--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <!-- 按鈕區域 - 左右並排 -->
           <div class="poster-buttons-container">
             <div class="ticket-button-container">
-              <a href="ticketvisit.html" class="ticket-button">
+              <a href="ticketvisit.html" class="ticket-button" id="ticket-button">
                 購票參觀｜TICKETS & VISIT
               </a>
             </div>
@@ -130,9 +130,8 @@
           
           <!-- 按鈕功能說明文字 -->
           <div class="button-explanation">
-            <div class="explanation-text" style="color:rgb(60,60,60)">     
-              左側的按鈕可供您購買票券，並同時了解展覽的開放時間地點、票價資訊、參展名單、完整節目表、展覽常見問及參觀須知；右側的按鈕則能讓您翻轉海報，查看背面的快速資訊。
-              The button on the left allows you to purchase tickets and learn more about visiting information, including opening hours, ticket prices, and visitor guidelines. The button on the right lets you flip the poster to view the back side, revealing additional details.
+            <div class="explanation-text" style="color:rgb(60,60,60)" id="button-explanation-text">     
+              左側的按鈕可供您購買票券，並同時了解展覽的開放時間地點、票價資訊、參展名單、完整節目表、展覽常見問及參觀須知；可以點按翻轉海報，查看背面的快速資訊。 The button on the left allows you to purchase tickets and learn more about visiting information, including opening hours, ticket prices, and visitor guidelines. Click the post to flip the poster to in order to read the back side, revealing additional details. 
             </div>
             <!-- <div class="explanation-text" style="color:rgb(60,60,60)">     
               2026草率季十週年 OPEN CALL 徵件開始！請點擊按鈕進入徵件頁面查看詳細資訊，包括徵件條件、徵件時間、徵件方式等以及草率季十週年的相關資訊。
@@ -346,7 +345,7 @@
     <!-- 滾動橫幅 -->
     <div class="banner">
       <div class="banner-track">
-        <div class="banner-content">
+        <div class="banner-content" id="banner-content-1">
           <span class="dot"></span> 2025 草率季 TPABF
           徵件結果已公布，請有報名的單位登入攤商系統查詢。 
           <span class="dot"></span> The selection results for the 2025 TPABF are
@@ -364,7 +363,7 @@
           請持續關注我們的社群平台，掌握最新活動消息。Follow us on social media
           for the latest updates.
         </div>
-        <div class="banner-content">
+        <div class="banner-content" id="banner-content-2">
           <span class="dot"></span> 2025 草率季 TPABF
           徵件結果已公布，請有報名的單位登入攤商系統查詢。 
           <span class="dot"></span> The selection results for the 2025 TPABF are
@@ -428,6 +427,7 @@
     <script src="js/mainpage_image_rotata.js"></script>
     <script src="js/homepage-zine.js"></script>
     <script src="js/credits-content.js"></script>
+    <script src="js/index-content-control.js"></script>
     
     <script>
       // Credit drop-up toggle using existing footer CREDITS link
