--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1095,10 +1095,10 @@
                               >
                                 上傳 Upload</button
                               ><br />
-                              <!-- <span
+                              <span
                                 id="declaration-upload-status"
                                 style="color: green"
-                              ></span> -->
+                              ></span>
                             </td>
                           </tr>
                         </table>
@@ -1367,10 +1367,10 @@
                       >
                         上傳 Upload</button
                       ><br />
-                      <!-- <span
+                      <span
                         id="marketing-upload-status"
                         style="color: green"
-                      ></span> -->
+                      ></span>
                     </div>
                   </div>
                   <div id="ddl-material-upload-section" class="ddl"></div>
@@ -1510,10 +1510,10 @@
                       >
                         上傳 Upload</button
                       ><br />
-                      <!-- <span
+                      <span
                         id="catalog-upload-status"
                         style="color: green"
-                      ></span> -->
+                      ></span>
                     </div>
                   </div>
                   <div id="ddl-catalog-upload-section" class="ddl"></div>
