--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -2418,6 +2418,80 @@
                 </td>
               </tr>
               <tr>
+                <td class="faq-number-cell">
+                  <span class="faq-number">7</span>
+                </td>
+                <td class="QA-section" style="border-right: none">
+                  <span class="labelAQ">Q: 可以使用發電機嗎？</span><br />
+                  <span
+                    style="
+                      font-size: 1rem;
+                      font-family: 'Inclusive Sans', sans-serif;
+                    "
+                  >
+                   A: :不開放使用發電機。若有使用的電力需求，請至攤商管理頁面下方的「電力需求」欄位進行編輯。
+                  </span>
+                </td>
+                <td class="QA-section">
+                  <span class="labelAQ en"
+                    >Q: Is it allowed to use a generator?</span
+                  ><br />
+                  <span class="faq-answer-en">
+                    A: Generators are not allowed. If you have any power requirements, please fill them in under the “Power Requirements”section at the bottom of your Exhibitor Management Page.
+                  </span>
+                </td>
+              </tr>
+              <tr>
+                <td class="faq-number-cell">
+                  <span class="faq-number">8</span>
+                </td>
+                <td class="QA-section" style="border-right: none">
+                  <span class="labelAQ">Q: 攤位是否有背牆？我可以換到靠牆的位子嗎？</span><br />
+                  <span
+                    style="
+                      font-size: 1rem;
+                      font-family: 'Inclusive Sans', sans-serif;
+                    "
+                  >
+                   A: :可以先參考以往攤位的展示方式，實際攤位配置方式可參考攤商管理頁面之攤主手冊（一月底寄出）。
+                  </span>
+                </td>
+                <td class="QA-section">
+                  <span class="labelAQ en"
+                    >Q: Will there be a back wall for the booth? Is it possible to switch to a wall-side booth?</span
+                  ><br />
+                  <span class="faq-answer-en">
+                    A: Please refer to previous booth setups for reference. Final booth layouts and wall availability will be detailed in the Exhibitor Manual, which will be sent at the end of January.
+                  </span>
+                </td>
+              </tr>
+              <tr>
+                <td class="faq-number-cell">
+                  <span class="faq-number">9</span>
+                </td>
+                <td class="QA-section" style="border-right: none">
+                  <span class="labelAQ">Q: 常見付款方式有哪些？
+                  </span><br />
+                  <span
+                    style="
+                      font-size: 1rem;
+                      font-family: 'Inclusive Sans', sans-serif;
+                    "
+                  >
+                   A: :大部分訪客偏好使用現金，但也有不少人使用信用卡或 Apple Pay。PayPal 較少見，但偶爾有人使用。如果可能，建議提供至少一種數位支付方式，但僅收現金也完全沒問題。
+                  </span>
+                </td>
+                <td class="QA-section">
+                  <span class="labelAQ en"
+                    >Q: What are the common payment methods?
+                    </span
+                  ><br />
+                  <span class="faq-answer-en">
+                    A: Most visitors prefer cash, but many also use credit cards and Apple Pay. PayPal is less common but still used occasionally. If possible, it’s a good idea to offer at least one digital payment option, though accepting cash only is also fine.
+                  </span>
+                </td>
+              </tr>
+              <tr>
                 <td class="faq-number-cell" style="background-color:lime"></td>
                 <td style="background-color: #000; color: #fff;"><marquee><strong>（活動期間）</strong></marquee></td>
                 <td style="background-color: #000; color: #fff;"><marquee><strong>(Event Period)</strong></marquee></td>
